fluxcd/apps/base/adbir/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: adbir
  annotations:
    linkerd.io/inject: enabled
